--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "contentful": "^11.7.15",
+    "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "sass": "^1.90.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
